<resources>
    <string name="app_name">Contacts Manager</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="Address">Address</string>
    <string name="Job">Job</string>
    <string name="Company">Company</string>
    <string name="Website">Website</string>
    <string name="Im">IM</string>
    <string name="phone_error">PHONE ERROR</string>
</resources>
